# RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  chat.html  docker-compose.yml  main.py  pyproject.toml  quantum_entanglement.txt  rag_implementation.ipynb  requirements.txt
data/vector_store/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ChatArea.css  ChatArea.js  Header.css  Header.js  InputBar.css  InputBar.js  Message.css  Message.js  ParticleCanvas.js  Sidebar.css  Sidebar.js
